Fixed some layout problems

--- a/styles.css
+++ b/styles.css
@@ -173,6 +173,7 @@ body {
 
 .brief-news-section {
     display: flex;
+    padding: 20px 0;
 }
 
 .brief-news-container {
@@ -252,7 +253,18 @@ footer {
     font-size: 1rem;
     text-align: right;
     width: 30%;
-    border-radius: 0 99px 99px 0;
+    border-radius: 0 999px 999px 0;
+}
+
+@media screen and (max-width: 670px) {
+    .subscription-form {
+        padding: 6px 20px;
+    }
+
+    .subscription-form .single-input-text {
+        width: auto;
+        flex: 1;
+    }
 }
 
 .single-input-button {
@@ -261,7 +273,7 @@ footer {
     background: #ddd;
     font-size: 1rem;
     border: none;
-    border-radius: 20px 0 0 20px;
+    border-radius: 999px 0 0 999px;
 }
 
 .footer-info {
@@ -320,6 +332,10 @@ footer {
 
 .left-bar .other-news-list {
     padding: 8px;
+}
+
+.full-news-section {
+    padding: 30px 0;
 }
 
 .full-news-section .flex-80-row-container {
